--- a/service-proxy-envoy.yaml
+++ b/service-proxy-envoy.yaml
@@ -10,59 +10,50 @@ static_resources:
         typed_config:
           "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
           codec_type: auto
-          stat_prefix: ingress_http
+          stat_prefix: grpc_json
+          # stat_prefix: ingress_http
           route_config:
             name: local_route
             virtual_hosts:
-            - name: backend
+            - name: service
               domains:
               - "*"
               routes:
               - match:
-                  prefix: "/service/1"
+                  prefix: "/service"
                 route:
-                  cluster: service1
-              - match:
-                  prefix: "/service/2"
-                route:
-                  cluster: service2
+                  cluster: local_service
           http_filters:
+          - name: envoy.grpc_json_transcoder
+            config:
+              proto_descriptor: "/tmp/Contracts/greet.proto"
+              services: ["Greet.Greeter"]
+              print_options:
+                add_whitespace: true
+                always_print_primitive_fields: true
+                always_print_enums_as_ints: false
+                preserve_proto_field_names: false
           - name: envoy.router
             typed_config: {}
 
   clusters:
-  - name: service1
+  - name: local_service
     connect_timeout: 0.25s
     type: strict_dns
     lb_policy: round_robin
-    http2_protocol_options: {}
     load_assignment:
-      cluster_name: service1
+      cluster_name: local_service
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: service1
-                port_value: 80
-  - name: service2
-    connect_timeout: 0.25s
-    type: strict_dns
-    lb_policy: round_robin
-    http2_protocol_options: {}
-    load_assignment:
-      cluster_name: service2
-      endpoints:
-      - lb_endpoints:
-        - endpoint:
-            address:
-              socket_address:
-                address: service2
-                port_value: 80
+                address: 127.0.0.1
+                port_value: 8080
 
 admin:
   access_log_path: "/dev/null"
   address:
     socket_address:
       address: 0.0.0.0
-      port_value: 8001
+      port_value: 8081
