--- a/gateway-envoy.yaml
+++ b/gateway-envoy.yaml
@@ -61,7 +61,7 @@ static_resources:
                 port_value: 80
 
 admin:
-  access_log_path: "/dev/null"
+  access_log_path: "/tmp/admin_access.log"
   address:
     socket_address:
       address: 0.0.0.0
