--- a/server/Makefile
+++ b/server/Makefile
@@ -1,4 +1,4 @@
-PROTOS=sample/msglib/*.pb*
+PROTOS=contracts/*.pb*
 BINDIR=bin
 GOOGLEAPIS_DIR=../googleapis
 
@@ -8,11 +8,10 @@ get:
 
 all:
 	export PATH=$$PATH:~/go/bin; \
-	protoc -I${GOOGLEAPIS_DIR} -Isample/msglib --go_out=plugins=grpc:. person.proto; \
-	protoc -I${GOOGLEAPIS_DIR} --include_imports -Isample/msglib --include_source_info --descriptor_set_out=sample/msglib/person.pb person.proto
+	protoc -I ${GOOGLEAPIS_DIR} -I contracts/ --go_out=plugins=grpc:. person.proto; \
+	protoc -I ${GOOGLEAPIS_DIR} --include_imports -I contracts/ --include_source_info --descriptor_set_out=contracts/person.pb person.proto
 
 	go build -o $(BINDIR)/personserver server/main.go 
-	go build -o $(BINDIR)/personclient client/main.go 
 
 clean:
 	rm -rf $(BINDIR)/* $(PROTOS)
