--- a/gateway/gateway-envoy.yaml
+++ b/gateway/gateway-envoy.yaml
@@ -9,53 +9,77 @@ static_resources:
       - name: envoy.http_connection_manager
         typed_config:
           "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
-          codec_type: auto
+          access_log:
+          - name: envoy.file_access_log
+            config:
+              path: /dev/stdout
           stat_prefix: grpc_json
-          # stat_prefix: ingress_http
+          codec_type: auto
           route_config:
             name: local_route
             virtual_hosts:
-            - name: service
+            - name: backend
               domains:
               - "*"
               routes:
               - match:
-                  prefix: "/"
+                  # Below prefix matches the outgoing gRPC route path, not incoming request route path
+                  # as the transcoder translates http request route to gRPC route
+                  prefix: "/contracts.Greeter"
+                  grpc: {}
                 route:
-                  cluster: local_service
+                  cluster: greeter-service
                   timeout:
                     seconds: 60
+              # - match:
+              #     prefix: "/service/2"
+              #   route:
+              #     cluster: service2
           http_filters:
           - name: envoy.grpc_json_transcoder
             config:
-              proto_descriptor: "/etc/Contracts/greet.pb"
-              services: ["Greet.Greeter"]
+              proto_descriptor: "contracts/desc.pb"
+              services: ["contracts.Greeter"] # to add ...
               print_options:
                 add_whitespace: true
                 always_print_primitive_fields: true
                 always_print_enums_as_ints: false
                 preserve_proto_field_names: false
           - name: envoy.router
-            typed_config: {}
 
   clusters:
-  - name: local_service
-    connect_timeout: 0.25s
+  - name: greeter-service
+    connect_timeout: 1.25s
     type: strict_dns
     lb_policy: round_robin
+    http2_protocol_options: {}
     load_assignment:
-      cluster_name: local_service
+      cluster_name: greeter-service
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
                 address: 127.0.0.1
-                port_value: 8080
+                port_value: 81
+  # - name: service2
+  #   connect_timeout: 0.25s
+  #   type: strict_dns
+  #   lb_policy: round_robin
+  #   http2_protocol_options: {}
+  #   load_assignment:
+  #     cluster_name: service2
+  #     endpoints:
+  #     - lb_endpoints:
+  #       - endpoint:
+  #           address:
+  #             socket_address:
+  #               address: service2
+  #               port_value: 80
 
 admin:
   access_log_path: "/tmp/admin_access.log"
   address:
     socket_address:
       address: 0.0.0.0
-      port_value: 8081
+      port_value: 8001
