--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -1,8 +1,17 @@
 FROM envoyproxy/envoy:latest
 
-ADD . .
+RUN apt update && apt -q install -y curl make
 
-RUN apt update && apt -q install -y curl
+# install protobuf compiler
+RUN apt update && \
+    apt -y install apt-utils unzip
+RUN PROTOC_ZIP=protoc-3.10.0-linux-x86_64.zip && \
+    curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.10.0/protoc-3.10.0-linux-x86_64.zip && \
+    unzip -o $PROTOC_ZIP -d /usr/local bin/protoc && \
+    unzip -o $PROTOC_ZIP -d /usr/local 'include/*' && \
+    rm -f $PROTOC_ZIP
+
+ADD . .
 
 RUN make build
 
