--- a/gateway/gateway-envoy.yaml
+++ b/gateway/gateway-envoy.yaml
@@ -28,13 +28,9 @@ static_resources:
                   prefix: "/contracts.Greeter"
                   grpc: {}
                 route:
-                  cluster: greeter-service
+                  cluster: go-service
                   timeout:
                     seconds: 60
-              # - match:
-              #     prefix: "/service/2"
-              #   route:
-              #     cluster: service2
           http_filters:
           - name: envoy.grpc_json_transcoder
             config:
@@ -48,34 +44,20 @@ static_resources:
           - name: envoy.router
 
   clusters:
-  - name: greeter-service
+  - name: go-service
     connect_timeout: 1.25s
     type: strict_dns
     lb_policy: round_robin
     http2_protocol_options: {}
     load_assignment:
-      cluster_name: greeter-service
+      cluster_name: go-service
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: 127.0.0.1
+                address: go-service # Map to docker service address
                 port_value: 81
-  # - name: service2
-  #   connect_timeout: 0.25s
-  #   type: strict_dns
-  #   lb_policy: round_robin
-  #   http2_protocol_options: {}
-  #   load_assignment:
-  #     cluster_name: service2
-  #     endpoints:
-  #     - lb_endpoints:
-  #       - endpoint:
-  #           address:
-  #             socket_address:
-  #               address: service2
-  #               port_value: 80
 
 admin:
   access_log_path: "/tmp/admin_access.log"
