--- a/gateway/makefile
+++ b/gateway/makefile
@@ -2,8 +2,8 @@
 build:
 	cd contracts; \
 	protoc \
-	-I ./greeter \
-	-I ./greeter2 \
+	-I ./greeter-go \
+	-I ./greeter-dotnet \
 	-I ./googleapis \
 	--include_imports --include_source_info \
 	--descriptor_set_out=./desc.pb ./**/*.proto
