--- a/dotnet-service/server.csproj
+++ b/dotnet-service/server.csproj
@@ -5,12 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="contracts/greeter2/*.proto" GrpcServices="Server" />
+    <Protobuf Include="contracts/greeter-dotnet/*.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Google.Api.CommonProtos" Version="1.7.0" />
-    <PackageReference Include="Grpc.AspNetCore" Version="2.25.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.26.0" />
   </ItemGroup>
 
 </Project>
