--- a/dotnet-service/makefile
+++ b/dotnet-service/makefile
@@ -1,7 +1,3 @@
 
-build:
-	cp -a contracts/googleapis/google ./google
-	dotnet build
-
-clean:
-	dotnet clean
+cert:
+	openssl req -newkey rsa:2048 -nodes -keyout ./cert/server.key -x509 -days 365 -out ./cert/server.crt
