--- a/go-service/sidecar_envoy.yaml
+++ b/go-service/sidecar_envoy.yaml
@@ -11,7 +11,8 @@ static_resources:
           "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
           access_log:
           - name: envoy.file_access_log
-            config:
+            typed_config:
+              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
               path: /dev/stdout
           codec_type: auto
           stat_prefix: ingress_http
