--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "dotnet-service/contracts/googleapis"]
 	path = dotnet-service/contracts/googleapis
 	url = https://github.com/googleapis/googleapis
+[submodule "web-client/contracts/googleapis"]
+	path = web-client/contracts/googleapis
+	url = https://github.com/googleapis/googleapis.git
