--- a/web-client/package.json
+++ b/web-client/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "google-protobuf": "^3.6.1",
-    "grpc-web": "^1.0.0"
+    "grpc-web": "^1.0.0",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   },
   "author": "Oscar Yu",
   "license": "ISC"
