--- a/web-client/package.json
+++ b/web-client/package.json
@@ -8,10 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "google-protobuf": "^3.6.1",
-    "grpc-web": "^1.0.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0"
+    "google-protobuf": "^3.11.4",
+    "grpc-web": "^1.0.7"
+  },
+  "devDependencies": {
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "author": "Oscar Yu",
   "license": "ISC"
