--- a/gateway/gateway_envoy.yaml
+++ b/gateway/gateway_envoy.yaml
@@ -29,7 +29,7 @@ static_resources:
                     regex: \*
                 allow_methods: GET, PUT, DELETE, POST, OPTIONS
                 allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
-                expose_headers: custom-header-1,grpc-status,grpc-message
+                expose_headers: grpc-status,grpc-message
               routes:
               - match:
                   # Below prefix matches the outgoing gRPC route path, not incoming request route path
