--- a/go-service/makefile
+++ b/go-service/makefile
@@ -1,6 +1,7 @@
 get:
 	go get -u google.golang.org/grpc
 	go get -u github.com/golang/protobuf/protoc-gen-go
+	go mod tidy
 
 build:
 	export PATH=$$PATH:~/go/bin; \
