--- a/deploy/kube/dotnet-service-pod.yaml
+++ b/deploy/kube/dotnet-service-pod.yaml
@@ -2,24 +2,24 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    app: go-service
-  name: go-service
+    app: dotnet-service
+  name: dotnet-service
 spec:
   selector:
     matchLabels:
-      app: go-service
+      app: dotnet-service
 
   template:
     metadata:
       labels:
-        app: go-service
+        app: dotnet-service
       annotations:
         sidecar.istio.io/userVolume: '[{ "name": "proto-descriptor", "configMap": { "name": "proto-descriptor", "items": [{ "key": "desc.pb", "path": "desc.pb" }] } }]'
         sidecar.istio.io/userVolumeMount: '[{ "name": "proto-descriptor", "mountPath": "/etc/envoy" }]'
     spec:
       containers:
-      - image: oscary/go-service
-        name: go-service
+      - image: oscary/dotnet-service
+        name: dotnet-service
         ports:
         - containerPort: 8080
         resources:
