--- a/deploy/kube/grpc-transcoder.yaml
+++ b/deploy/kube/grpc-transcoder.yaml
@@ -22,8 +22,22 @@ spec:
           proto_descriptor: /etc/envoy/desc.pb
           services:
           - go_service.Greeter
-          # - dotnet_service.Greeter
+          - dotnet_service.Greeter
           # match_incoming_request_route: true # Required for CORS to work
           print_options:
             add_whitespace: true
             always_print_primitive_fields: true
+
+  - applyTo: HTTP_FILTER
+    match:
+      context: SIDECAR_INBOUND
+      listener:
+        filterChain:
+          filter:
+            name: "envoy.http_connection_manager"
+            subFilter:
+              name: "envoy.router"
+    patch:
+      operation: INSERT_BEFORE
+      value:
+        name: envoy.grpc_web
