--- a/deploy/kube/dotnet-service-pod.yaml
+++ b/deploy/kube/dotnet-service-pod.yaml
@@ -18,8 +18,9 @@ spec:
         sidecar.istio.io/userVolumeMount: '[{ "name": "proto-descriptor", "mountPath": "/etc/envoy" }]'
     spec:
       containers:
-      - image: oscary/dotnet-service
+      - image: dotnet-service
         name: dotnet-service
+        imagePullPolicy: Never
         ports:
         - containerPort: 8080
         resources:
