--- a/deploy/kube/grpc-transcoder.yaml
+++ b/deploy/kube/grpc-transcoder.yaml
@@ -10,15 +10,15 @@ spec:
       listener:
         filterChain:
           filter:
-            name: "envoy.http_connection_manager"
+            name: envoy.http_connection_manager
             subFilter:
-              name: "envoy.router"
+              name: envoy.router
     patch:
       operation: INSERT_BEFORE
       value:
         name: envoy.grpc_json_transcoder
         typed_config:
-          "@type": type.googleapis.com/envoy.config.filter.http.transcoder.v2.GrpcJsonTranscoder
+          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
           proto_descriptor: /etc/envoy/desc.pb
           services:
           - go_service.Greeter
