--- a/dotnet-service/Dockerfile
+++ b/dotnet-service/Dockerfile
@@ -1,7 +1,16 @@
-FROM mcr.microsoft.com/dotnet/sdk:5.0
+FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build-env
 WORKDIR /app
 
 ADD . .
 RUN dotnet build
 
-ENTRYPOINT dotnet run
+# Build release package
+RUN dotnet publish -c Release -o out
+
+# Build runtime image
+FROM mcr.microsoft.com/dotnet/aspnet:5.0-focal
+WORKDIR /app
+
+COPY --from=build-env /app/out ./
+
+ENTRYPOINT dotnet server.dll
