--- a/go-service/makefile
+++ b/go-service/makefile
@@ -2,7 +2,7 @@ get:
 	go get -u \
 		google.golang.org/grpc \
 		google.golang.org/protobuf/cmd/protoc-gen-go \
-        google.golang.org/grpc/cmd/protoc-gen-go-grpc
+		google.golang.org/grpc/cmd/protoc-gen-go-grpc
 
 build:
 	mkdir -p rpc
@@ -10,6 +10,9 @@ build:
 	protoc -I contracts/greeter-go -I contracts/googleapis \
 		--go_out=rpc --go_opt=paths=source_relative --go-grpc_out=rpc --go-grpc_opt=paths=source_relative contracts/greeter-go/*.proto
 	go build -o server_exec
+
+build-frozen:
+	go build -mod=readonly
 
 all:
 	make get
