--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -33,7 +33,7 @@ RUN echo "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] htt
 RUN apt update && apt install -y kubectl
 
 # install protobuf compiler
-RUN PROTOC_VER=3.15.6 && \
+RUN PROTOC_VER=3.15.8 && \
     PROTOC_ZIP=protoc-${PROTOC_VER}-linux-x86_64.zip && \
     curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v${PROTOC_VER}/${PROTOC_ZIP} && \
     unzip -o $PROTOC_ZIP -d /usr/local bin/protoc && \
@@ -41,12 +41,12 @@ RUN PROTOC_VER=3.15.6 && \
     rm -f $PROTOC_ZIP
 
 # Install istioctl
-ARG ISTIO_VERSION="1.9.2"
+ARG ISTIO_VERSION="1.9.3"
 RUN curl -L https://istio.io/downloadIstio | ISTIO_VERSION=${ISTIO_VERSION} sh -
 ENV PATH="${PWD}/istio-${ISTIO_VERSION}/bin:${PATH}"
 
 # Upgrade and clean up
-RUN apt upgrade -y && apt autoremove -y && apt autoclean -y
+RUN apt upgrade -y && apt autoremove -y --purge && apt autoclean
 
 # Switch back to dialog for any ad-hoc use of apt
 ENV DEBIAN_FRONTEND=dialog
