--- a/web-client/makefile
+++ b/web-client/makefile
@@ -6,10 +6,9 @@ get:
 
 gen:
 	export PATH=$$PATH:$$PWD; \
-	cd contracts; \
-	protoc -I . -I ./googleapis ./greeter-go/*.proto \
-	--js_out=import_style=commonjs:../src \
-	--grpc-web_out=import_style=commonjs,mode=grpcwebtext:../src
+	protoc -I ../contracts -I ../contracts/googleapis ../contracts/greeter-go/*.proto \
+	--js_out=import_style=commonjs:./src \
+	--grpc-web_out=import_style=commonjs,mode=grpcwebtext:./src
 	ls -1 ./src/greeter-go/*.js | xargs sed -i "" '/annotations_pb/d'
 	# Remove imports for annotation which is unused from generated files (waiting for official fix)
 
