--- a/go-service/makefile
+++ b/go-service/makefile
@@ -10,6 +10,7 @@ build:
 	protoc -I ../contracts/greeter-go -I ../contracts/googleapis \
 		--go_out=rpc --go_opt=paths=source_relative --go-grpc_out=rpc --go-grpc_opt=paths=source_relative ../contracts/greeter-go/*.proto
 	go build -o server_exec
+	go mod tidy
 
 build-frozen:
 	go build -mod=readonly -o server_exec
