Fix dotnet service do not build issue, add istio install spec config.

--- a/kube/deploy/grpc-filters.yaml
+++ b/kube/deploy/grpc-filters.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
-  name: stock-discovery-grpc-transcoder
+  name: grpc-filters
 spec:
   configPatches:
   - applyTo: HTTP_FILTER
