--- a/dotnet-service/Dockerfile
+++ b/dotnet-service/Dockerfile
@@ -1,9 +1,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build-env
 WORKDIR /app
 
-ADD . .
-RUN dotnet build
-
+COPY . .
 # Build release package
 RUN dotnet publish -c Release -o out
 
@@ -13,4 +11,4 @@ WORKDIR /app
 
 COPY --from=build-env /app/out ./
 
-ENTRYPOINT dotnet server.dll
+ENTRYPOINT dotnet release.dll
