Simplify dotnet service build process, update readme.

--- a/dotnet-service/Dockerfile
+++ b/dotnet-service/Dockerfile
@@ -1,7 +1,10 @@
+# Note: build dotnet-service with this file from outer(root) directory
+
 FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build-env
 WORKDIR /app
 
-COPY . .
+COPY ./dotnet-service .
+COPY ./contracts ../contracts
 # Build release package
 RUN dotnet publish -c Release -o out
 
@@ -11,4 +14,4 @@ WORKDIR /app
 
 COPY --from=build-env /app/out ./
 
-ENTRYPOINT dotnet release.dll
+ENTRYPOINT dotnet server.dll
