--- a/dotnet-service/appsettings.json
+++ b/dotnet-service/appsettings.json
@@ -9,6 +9,11 @@
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http2"
+    },
+    "Endpoints": {
+      "Http2": {
+        "Url": "http://0.0.0.0:8080"
+      }
     }
   }
 }
