--- a/kube/services/grpc-filters.yaml
+++ b/kube/services/grpc-filters.yaml
@@ -33,10 +33,10 @@ spec:
       listener:
         filterChain:
           filter:
-            name: "envoy.filters.network.http_connection_manager"
+            name: envoy.filters.network.http_connection_manager
             subFilter:
-              name: "envoy.filters.http.router"
+              name: envoy.filters.http.router
     patch:
       operation: INSERT_BEFORE
       value:
-        name: envoy.grpc_web
+        name: envoy.filters.http.grpc_web
