--- a/dotnet-service/server.csproj
+++ b/dotnet-service/server.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Api.CommonProtos" Version="2.3.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.37.0" />
+    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.37.0" />
   </ItemGroup>
 
 </Project>
